# auto-wizard101

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
examples/: autodance.py  bazaarsniper.py  wizard101.py  wizard101_central_scraper.py
wizard101/: bazaar.py  petgames.py  util.py
wizard101/central/: __init__.py  constants.py  database.py  models.py  processor.py  remote.py
wizard101/resource/: central.sqlite
