[metadata]
name = auto-wizard101
version = 1.0.4
author = gabemillikan
description = Automatically complete repetitive tasks in wizard101.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GabeMillikan/auto-wizard101
project_urls =
    Bug Tracker = https://github.com/GabeMillikan/auto-wizard101/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license_files = LICENSE

[options]
include_package_data = True
package_dir =
    = .
packages = wizard101
python_requires = >=3.6
install_requires =
    opencv-python
	keyboard
	mss